update of model and evaluation for 2021-10-28

--- a/config.json
+++ b/config.json
@@ -28,16 +28,16 @@
   "COMMISSION_RATE" : 0.0025,
   "TRAINING_STEPS" : 8000,
   "OPT_TRAINING_STEPS" : 1000,
-  "PREDICT_ROLLTRAIN_STEPS":50,
+  "PREDICT_ROLLTRAIN_STEPS":1000,
   "VALID_PORTION":0.0,
   "HYPERPARAMETERS" : {
-    "batch_size": 8,
-    "window_size": 16, 
-    "learning_rate": 0.009714192166349505, 
-    "weight_decay": 4.942937199900715e-06, 
-    "reg_norm": null,
-    "conv_layer_outputs": [48], 
-    "eiie_dense_out_channels": 10, 
+    "batch_size": 32,
+    "window_size": 32,
+    "learning_rate": 0.003190626279195541,
+    "weight_decay": 1.6898743172347175e-06,
+    "reg_norm": 1,
+    "conv_layer_outputs": [72, 48, 36],
+    "eiie_dense_out_channels": 100,
     "risk_penalty": null,
     "geometric_bias":5e-5,
     "adversarial_flag" : true,
@@ -45,13 +45,13 @@
     "noise_normal_var":0.002
   },
   "BACKTEST_ROLLTRAIN_HYPERPARAMETERS" : {
-    "batch_size": 8,
-    "window_size": 16,
-    "learning_rate": 0.009714192166349505,
-    "weight_decay": 4.942937199900715e-06,
-    "reg_norm": null,
-    "conv_layer_outputs": [48],
-    "eiie_dense_out_channels": 10,
+    "batch_size": 32,
+    "window_size": 32,
+    "learning_rate": 0.003190626279195541,
+    "weight_decay": 1.6898743172347175e-06,
+    "reg_norm": 1,
+    "conv_layer_outputs": [72, 48, 36],
+    "eiie_dense_out_channels": 100,
     "risk_penalty": null,
     "geometric_bias":1e-2,
     "adversarial_flag" : true,
